# Vroom-Vroom-Project

./: README.md
APPLI/: READ_ME.md  bridge.py  controller_state.py  formatter.py  gamepad_reader.py  logger.py  main.py  main_window.html  main_window.py  requirements.txt  settings.py  udp_sender.py  ui_bridge.py
ESP32/: README.md  sdkconfig  test_reception.py
ESP32/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
ESP32/main/include/: gp_proto.h  led_rgb.h  main.h  spi_link.h  udp_server.h  user_log_setup.h  user_uart.h  wifi_ap.h
ESP32/main/src/: led_rgb.c  main.c  spi_link.c  udp_server.c  user_log_setup.c  user_uart.c  wifi_ap.c
STM32/LEDs/: .cproject  .project  LEDs Debug.launch  LEDs.ioc
STM32/LEDs/Core/Inc/: stm32l4xx_it.h
STM32/LEDs/Core/Src/: main.c  stm32l4xx_hal_msp.c  (+1 more)
STM32/LEDs/Debug/: LEDs.elf  LEDs.list  LEDs.map  makefile
STM32/RECEIVE_FINAL/: .cproject  .mxproject  .project  RECEIVE_FINAL Debug.launch  RECEIVE_FINAL.ioc
STM32/RECEIVE_FINAL/Debug/: RECEIVE_FINAL.elf  RECEIVE_FINAL.list  RECEIVE_FINAL.map  makefile  objects.list
STM32/test_v1/: .cproject  .mxproject  .project  test_v1 Debug.launch  test_v1.ioc
STM32/test_v1/Debug/: makefile  test_v1.elf  test_v1.list  test_v1.map
VroomVroom/: .cproject  .project  VroomVroom.ioc  VroomVroom.launch
VroomVroom/Core/Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
VroomVroom/Core/Src/: freertos.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
VroomVroom/Debug/: VroomVroom.elf  VroomVroom.list  VroomVroom.map  makefile  objects.list  sources.mk
(+62 files in other folders)
